made an event handler, updating style of different elements

--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 <body>
 <h1>The Font Combinator!</h1>
 <h2>Stuff will go here</h2>
-<font-list></font-list>
+<font-list target="h1"></font-list>
+<font-list target="h2"></font-list>
 
 </body>
 </html>
