--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
   <script defer type="module" src="./index.js"></script>
 </head>
 <body>
-<h1>The Font Combinator!</h1>
-<h2>Stuff will go here</h2>
-<font-list target="h1"></font-list>
-<font-list target="h2"></font-list>
+<h1 contenteditable="true">The Font Combinator!</h1>
+<h2 contenteditable="true">Stuff will go here</h2>
+<font-list target="h1">Headline:</font-list>
+<font-list target="h2">Subhead:</font-list>
 
 </body>
 </html>
