paragraph, rendering bug

--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
 <body>
 <h1 contenteditable="true">The Font Combinator!</h1>
 <h2 contenteditable="true">Stuff will go here</h2>
+<p contenteditable="true" style="font-weight: 400;">Donec ante. Sed at velit. Vestibulum at purus at urna porttitor sodales. Nullam pulvinar, urna interdum eleifend sodales, eros est tempus quam, quis ultricies nibh elit vitae urna. Donec pretium arcu at quam. Quisque tristique, lacus id tempor blandit, quam massa imperdiet lorem, porta fermentum quam ante ac tortor. Curabitur mauris lectus, dapibus ut, ornare sit amet, vulputate sit amet, erat.</p>
 <font-list target="h1">Headline:</font-list>
 <font-list target="h2">Subhead:</font-list>
-
+<font-list target="p">Body:</font-list>
 </body>
 </html>
