style changes work

--- a/index.html
+++ b/index.html
@@ -23,10 +23,12 @@
 <details name="controls">
   <summary>Subhead</summary>
   <font-select target="h2">Subhead:</font-select>
+  <font-control target="h2"></font-control>
 </details>
 <details name="controls">
   <summary>Body</summary>
   <font-select target="p">Body:</font-select>
+  <font-control target="p"></font-control>
 </details>
 </body>
 </html>
