added text box controls

--- a/index.html
+++ b/index.html
@@ -9,25 +9,25 @@
   <script defer type="module" src="./index.js"></script>
 </head>
 <body>
-<h1 contenteditable="true">The Font Combinator!</h1>
-<h2 contenteditable="true">Stuff will go here</h2>
-<p contenteditable="true" style="font-weight: 400;">Donec ante. Sed at velit. Vestibulum at purus at urna porttitor sodales. Nullam pulvinar, urna interdum eleifend sodales, eros est tempus quam, quis ultricies nibh elit vitae urna. Donec pretium arcu at quam. Quisque tristique, lacus id tempor blandit, quam massa imperdiet lorem, porta fermentum quam ante ac tortor. Curabitur mauris lectus, dapibus ut, ornare sit amet, vulputate sit amet, erat.</p>
+<h1 contenteditable="plaintext-only">The Font Combinator!</h1>
+<h2 contenteditable="plaintext-only">You can edit this page</h2>
+<p contenteditable="plaintext-only" style="font-weight: 400;">Donec ante. Sed at velit. Vestibulum at purus at urna porttitor sodales. Nullam pulvinar, urna interdum eleifend sodales, eros est tempus quam, quis ultricies nibh elit vitae urna. Donec pretium arcu at quam. Quisque tristique, lacus id tempor blandit, quam massa imperdiet lorem, porta fermentum quam ante ac tortor. Curabitur mauris lectus, dapibus ut, ornare sit amet, vulputate sit amet, erat.</p>
 
 
 <details name="controls" open>
   <summary>Headline</summary>
-  <font-select target="h1">Headline:</font-select>
+  <font-select target="h1"></font-select>
   <font-control target="h1"></font-control>
 </details>
 
 <details name="controls">
   <summary>Subhead</summary>
-  <font-select target="h2">Subhead:</font-select>
+  <font-select target="h2"></font-select>
   <font-control target="h2"></font-control>
 </details>
 <details name="controls">
   <summary>Body</summary>
-  <font-select target="p">Body:</font-select>
+  <font-select target="p"></font-select>
   <font-control target="p"></font-control>
 </details>
 </body>
