hiding text box if the browser doesn't support it

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <font-control target="h2"></font-control>
 </details>
 <details name="controls">
-  <summary>Body</summary>
+  <summary>Paragraph</summary>
   <font-select target="p"></font-select>
   <font-control target="p"></font-control>
 </details>
