don't make details mutually exclusive

--- a/index.html
+++ b/index.html
@@ -14,18 +14,18 @@
 <p contenteditable="plaintext-only">Donec ante. Sed at velit. Vestibulum at purus at urna porttitor sodales. Nullam pulvinar, urna interdum eleifend sodales, eros est tempus quam, quis ultricies nibh elit vitae urna. Donec pretium arcu at quam. Quisque tristique, lacus id tempor blandit, quam massa imperdiet lorem, porta fermentum quam ante ac tortor. Curabitur mauris lectus, dapibus ut, ornare sit amet, vulputate sit amet, erat.</p>
 
 
-<details name="controls" open>
+<details open>
   <summary>Headline</summary>
   <font-select target="h1"></font-select>
   <font-control target="h1"></font-control>
 </details>
 
-<details name="controls">
+<details>
   <summary>Subhead</summary>
   <font-select target="h2"></font-select>
   <font-control target="h2"></font-control>
 </details>
-<details name="controls">
+<details>
   <summary>Paragraph</summary>
   <font-select target="p"></font-select>
   <font-control target="p"></font-control>
