adding share button

--- a/index.html
+++ b/index.html
@@ -41,7 +41,11 @@
       <color-control target="body"></color-control>
     </details>
   </div>
-  <p>&copy; Copyright Chip Cullen</p>
+  <p>
+  &copy; Copyright Chip Cullen
+  <share-button></share-button>
+
+  </p>
 </section>
 </body>
 </html>
