added copy url button

--- a/index.html
+++ b/index.html
@@ -41,11 +41,12 @@
       <color-control target="body"></color-control>
     </details>
   </div>
-  <p>
-  &copy; Copyright Chip Cullen
+  <footer>
+  <copy-url-button></copy-url-button>
   <share-button></share-button>
+  &copy; Copyright Chip Cullen
 
-  </p>
+  </footer>
 </section>
 </body>
 </html>
