--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
   <footer>
   <copy-url-button></copy-url-button>
   <share-button></share-button>
+  <reset-button></reset-button>
   &copy; Copyright Chip Cullen
 
   </footer>
