allow choosing which set of fonts

--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
     </details>
   </div>
   <footer>
+  <configure-font-select></configure-font-select>
   <copy-url-button></copy-url-button>
   <share-button></share-button>
   <reset-button></reset-button>
